--- a/index.html
+++ b/index.html
@@ -231,10 +231,11 @@
         </div>
         <div class="box">
             <div class="image">
-            <img decoding="async" src="imgs/gallery-06.png" alt="" />
+                <img decoding="async" src="imgs/gallery-06.png" alt="" />
             </div>
         </div>
         </div>
+    </div>
         <!-- End Gallery -->
     </div>
     <!-- Start Features -->
