added testimonails section

--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
                 <h3>Mohamed Farag</h3>
                 <span class="title">Full Stack Developer</span>
                 <div class="rate">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
                 <p>
