--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <!-- Main CSS File -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Coders Arena</title>
+    <title>Company</title>
 </head>
 <body>
     <!-- Start Header -->
@@ -366,5 +366,133 @@
         </div>
     </div>
     <!-- End Testimonials -->
+    <!-- Start Team -->
+    <div class="team" id="team">
+        <h2 class="main-title">Team Members</h2>
+        <div class="container">
+            <div class="box">
+                <div class="data">
+                    <img src="imgs/team-01.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="data">
+                    <img src="imgs/team-02.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+                <div class="box">
+                    <div class="data">
+                    <img src="imgs/team-03.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                    <img src="imgs/team-04.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                    <img src="imgs/team-05.png" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                    <img src="imgs/team-06.png" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                    <img src="imgs/team-07.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                    <img src="imgs/team-08.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+                </div>
+                
+        
+    </div>
+    <!-- End Team -->
 </body>
 </html>
