--- a/index.html
+++ b/index.html
@@ -554,5 +554,76 @@
         </div>
     </div>
     <!-- End Services -->
+    <!-- Strat Skills -->
+    <div class="our-skills" id="our-skills">
+        <h2 class="main-title">Our Skills</h2>
+        <div class="container">
+            <img src="imgs/skills.png" alt="">
+            <div class="skills">
+                <div class="skill">
+                    <h3>HTML <span>80%</span></h3>
+                    <div class="prog">
+                        <span style="width: 80%;" data-progress="80%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>CSS <span>85%</span></h3>
+                    <div class="prog">
+                        <span style="width: 85%;" data-progress="85%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>JavaScript <span>70%</span></h3>
+                    <div class="prog">
+                        <span style="width: 70%;" data-progress="70%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>Python <span>80%</span></h3>
+                    <div class="prog">
+                        <span style="width: 80%;" data-progress="80%"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Skills -->
+    <!-- Start Work -->
+    <div class="work" id="work">
+        <h2 class="main-title">How it work ?</h2>
+        <div class="container">
+            <img src="imgs/work-steps.png" alt="">
+            <div class="info">
+                <div class="box">
+                    <img src="imgs/work-steps-1.png" alt="">
+                    <div class="text">
+                        <h3>Business Analysis</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab amet qui sint illum quos doloremque fugiat temporibus
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="imgs/work-steps-2.png" alt="">
+                    <div class="text">
+                        <h3>Architecture</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab amet qui sint illum quos doloremque fugiat temporibus
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="imgs/work-steps-3.png" alt="">
+                    <div class="text">
+                        <h3>Develpement</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab amet qui sint illum quos doloremque fugiat temporibus
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Work -->
 </body>
 </html>
