added events section

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
     </div>
     <!-- End Skills -->
     <!-- Start Work -->
-    <div class="work" id="work">
+    <div class="work" id="work-steps">
         <h2 class="main-title">How it work ?</h2>
         <div class="container">
             <img src="imgs/work-steps.png" alt="">
@@ -625,5 +625,43 @@
         </div>
     </div>
     <!-- End Work -->
+    <!-- Start Events -->
+    <div class="events" id="events">
+        <h2 class="main-title">Latest Events</h2>
+        <div class="container">
+            <img src="imgs/events.png" alt="">
+            <div class="info">
+                <div class="time">
+                    <div class="unit">
+                        <span>10</span>
+                        <span>Day</span>
+                    </div>
+                    <div class="unit">
+                        <span>7</span>
+                        <span>Hours</span>
+                    </div>
+                    <div class="unit">
+                        <span>59</span>
+                        <span>Minutes</span>
+                    </div>
+                    <div class="unit">
+                        <span>2</span>
+                        <span>Seconds</span>
+                    </div>
+                </div>
+                <div class="title">Tech Masters Event 2021</div>
+                <p class="description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem illo, iure eveniet necessitatibus
+                </p>
+            </div>
+            <div class="subscribe">
+                <form action="">
+                    <input type="email" name="email" placeholder="Enter Your Email">
+                    <input type="submit" value="subscribe">
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End Events -->
 </body>
 </html>
