--- a/index.html
+++ b/index.html
@@ -663,5 +663,61 @@
         </div>
     </div>
     <!-- End Events -->
+    <!-- Start Pricing -->
+    <div class="pricing" id="pricing">
+        <h2 class="main-title">pricing plans</h2>
+        <div class="container">
+            <div class="box">
+                <h3>basic</h3>
+                <img src="imgs/hosting-basic.png" alt="">
+                <div class="price">
+                    <span>$15</span>
+                    <span>Per Month</span>
+                </div>
+                <ul class="pros">
+                    <li>10GB HDD Space</li>
+                    <li>5 Email Addresses</li>
+                    <li>2 Subdomains</li>
+                    <li>4 Databases</li>
+                    <li>Basic Support</li>
+                </ul>
+                <a href="#">Choose Plan</a>
+            </div>
+            <div class="box advanced">
+            <div class="popular">Most Popular</div>
+                <h3>advanced</h3>
+                <img src="imgs/hosting-advanced.png" alt="">
+                <div class="price">
+                    <span>$25</span>
+                    <span>Per Month</span>
+                </div>
+                <ul class="pros">
+                    <li>20GB HDD Space</li>
+                    <li>10 Email Addresses</li>
+                    <li>5 Subdomains</li>
+                    <li>8 Databases</li>
+                    <li>Advanced Support</li>
+                </ul>
+                <a href="#">Choose Plan</a>
+            </div>
+            <div class="box">
+                <h3>professional</h3>
+                <img src="imgs/hosting-professional.png" alt="">
+                <div class="price">
+                    <span>$45</span>
+                    <span>Per Month</span>
+                </div>
+                <ul class="pros">
+                    <li>50GB HDD Space</li>
+                    <li>20 Email Addresses</li>
+                    <li>10 Subdomains</li>
+                    <li>20 Databases</li>
+                    <li>professional Support</li>
+                </ul>
+                <a href="#">Choose Plan</a>
+            </div>
+        </div>
+    </div>
+    <!-- End Pricing -->
 </body>
 </html>
