--- a/index.html
+++ b/index.html
@@ -719,5 +719,86 @@
         </div>
     </div>
     <!-- End Pricing -->
+    <!-- Start Video -->
+    <div class="video" id="video">
+        <h2 class="main-title">top video</h2>
+        <div class="container">
+            <div class="holder">
+                <div class="list">
+                    <div class="name">
+                        Top Videos
+                        <i class="fas fa-random"></i>
+                    </div>
+                    <ul>
+                        <li>How To Create Sub Domain<span>05:18</span></li>
+                        <li>Playing With The DNS<span>03:18</span></li>
+                        <li>Everything About The Virtual Hosts<span>05:25</span></li>
+                        <li>How To Monitor Your Website<span>05:18</span></li>
+                        <li>Uncharted Beating The Last Boss<span>04:16</span></li>
+                        <li>Ys Oath In Felghana Overview<span>07:48</span></li>
+                        <li>Ys Series All Games Ending<span>08:10</span></li>
+                    </ul>
+                </div>
+                <div class="preview">
+                    <img src="imgs/video-preview.jpg" alt="">
+                    <div class="info">Everything About The Virtual Hosts</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Video -->
+    <!-- Start Stats -->
+    <div class="stats" id="stats">
+        <h2>Our Awesome Stats</h2>
+        <div class="container">
+            <div class="box">
+                <i class="far fa-user fa-2x fa-w"></i>
+                <span>150</span>
+                <div class="text">Clients</div>
+            </div>
+            <div class="box">
+                <i class="fas fa-code fa-2x fa-w"></i>
+                <span>135</span>
+                <div class="text">Projects</div>
+            </div>
+            <div class="box">
+                <i class="fas fa-earth fa-2x fa-w"></i>
+                <span>50</span>
+                <div class="text">Countries</div>
+            </div>
+            <div class="box">
+                <i class="fas fa-money-bill fa-2x fa-w"></i>
+                <span>500K</span>
+                <div class="text">Money</div>
+            </div>
+        </div>
+    </div>
+    <!-- End Stats -->
+    <!-- Start Discount -->
+    <div class="discount" id="discount">
+        <div class="image">
+            <div class="content">
+                <h2>We Have A Discount</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque fugit libero dolorem, vero cum volupt
+                    ate accusamus harum eius numquam ad ut pariatur molestias molestiae quam exercitationem omnis explicabo laboriosam blanditiis.
+                </p>
+                <img src="imgs/discount.png" alt="">
+            </div>
+        </div>
+        <div class="form">
+            <div class="content">
+                <h2>Request A Discount</h2>
+                <form action="">
+                    <input class="input" type="text" name="name" placeholder="Your Name">
+                    <input class="input" type="email" name="email" placeholder="Your Email">
+                    <input class="input" type="text" name="number" placeholder="Your Phone">
+                    <textarea class="input" name="" placeholder="Tell Us About Your Needs"></textarea>
+                    <input type="submit" value="Send">
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End Discount -->
 </body>
 </html>
