--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
             </div>
         </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Articles -->
     <!-- Start Gallery -->
     <div class="gallery" id="gallery">
@@ -492,6 +493,7 @@
                 </div>
         </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Team -->
     <!-- Start Services -->
     <div class="services" id="services">
@@ -627,6 +629,8 @@
     <!-- End Work -->
     <!-- Start Events -->
     <div class="events" id="events">
+        <div class="dots dots-up"></div>
+        <div class="dots dots-down"></div>
         <h2 class="main-title">Latest Events</h2>
         <div class="container">
             <img src="imgs/events.png" alt="">
@@ -665,6 +669,8 @@
     <!-- End Events -->
     <!-- Start Pricing -->
     <div class="pricing" id="pricing">
+        <div class="dots dots-up"></div>
+        <div class="dots dots-down"></div>
         <h2 class="main-title">pricing plans</h2>
         <div class="container">
             <div class="box">
@@ -800,5 +806,84 @@
         </div>
     </div>
     <!-- End Discount -->
+    <!-- Start Footer -->
+    <footer>
+        <div class="container">
+            <div class="box">
+                <h2>Elzero</h2>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </li>
+                    
+                </ul>
+                <p class="text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure quam magnam doloribus mollitia quo enim alias facere animi sunt
+                </p>
+            </div>
+            <div class="box">
+                <ul class="links">
+                    <li>
+                        <a href="#">Important Link 1</a>
+                    </li>
+                    <li>
+                        <a href="#">Important Link 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Important Link 3</a>
+                    </li>
+                    <li>
+                        <a href="#">Important Link 4</a>
+                    </li>
+                    <li>
+                        <a href="#">Important Link 5</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="box">
+                <div class="line">
+                    <i class="fa fa-map-marker-alt fa-fw"></i>
+                    <div class="info">
+                        Egypt, Giza, Inside The Sphinx, Room Number 220
+                    </div>
+                </div>
+                <div class="line">
+                    <i class="fa fa-clock fa-fw"></i>
+                    <div class="info">
+                        Business Hours: From 10:00 To 18:00
+                    </div>
+                </div>
+                <div class="line">
+                    <i class="fa fa-phone-volume fa-fw"></i>
+                    <div class="info">
+                        <span>+20123456789</span>
+                        <span>+20198765432</span>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <img src="imgs/gallery-01.png" alt="">
+                <img src="imgs/gallery-02.png" alt="">
+                <img src="imgs/gallery-03.jpg" alt="">
+                <img src="imgs/gallery-04.png" alt="">
+                <img src="imgs/gallery-05.jpg" alt="">
+                <img src="imgs/gallery-06.png" alt="">
+            </div>
+        </div>
+        <p class="copyright">Made With &lt;3 By Elzero</p>
+    </footer>
+    <!-- End Footer -->
 </body>
 </html>
